WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128264
WK2: Caret, selections and autocorrection bubbles are incorrectly positioned when inside an iframe
https://bugs.webkit.org/show_bug.cgi?id=128264
Summary
WK2: Caret, selections and autocorrection bubbles are incorrectly positioned ...
Enrica Casucci
Reported
2014-02-05 12:26:59 PST
Use www-archive.mozilla.org/editor/midasdemo for an example of editable content in an iframe. Caret appears in the wrong position, any range selection is drawn incorrectly and the autocorrection bubble shows up in the wrong spot. Same is true for non editable content in an iframe. <
rdar://problem/15986954
>
Attachments
Patch
(8.77 KB, patch)
2014-02-05 12:31 PST
,
Enrica Casucci
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-02-05 12:31:23 PST
Created
attachment 223255
[details]
Patch
Enrica Casucci
Comment 2
2014-02-05 13:50:03 PST
Committed revision 163476.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug