WK2: Caret, selections and autocorrection bubbles are incorrectly positioned when inside an iframe. https://bugs.webkit.org/show_bug.cgi?id=128264 <rdar://problem/15986954>

Reviewed by Simon Fraser.

Source/WebCore:

Adding new exported function.

* WebCore.exp.in:

Source/WebKit2:

Everywhere we return rectangles to the UIProcess, we need to convert them
to root view coordinates. Also, we should allow hit testing to go into child
frames.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::editorState):
* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::selectWithGesture):
(WebKit::WebPage::updateSelectionWithTouches):
(WebKit::WebPage::convertSelectionRectsToRootView):
(WebKit::WebPage::requestAutocorrectionData):
(WebKit::WebPage::getPositionInformation):



Canonical link: https://commits.webkit.org/146274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163476 268f45cc-cd09-0410-ab3c-d52691b4dbfc